# statquest-signa

./: Dockerfile  README.md  UV_MIGRATION.md  WARP.md  pyproject.toml
chapter_01/: chapter_01_basic_nn_in_pytorch.ipynb
chapter_02/: chapter_02_intro_do_backpropagation.ipynb
chapter_06/: chapter_06_convolutional_neural_networks.ipynb
