[project]
name = "statquest-signa"
version = "0.1.0"
description = "PyTorch tutorials for The StatQuest Illustrated Guide to Neural Networks and AI"
authors = [
    {name = "Josh Starmer", email = "josh@statquest.org"},
    {name = "Jochen Deister", email = "pattkopp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "matplotlib",
    "seaborn",
    "lightning",
    "pandas",
    "scikit-learn",
    "bertopic",
    "datasets",
    "datamapplot",
    "wordcloud",
    "jupyter",
]
